--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "appli-meteo",
   "version": "1.0.0",
-  "main": "index.js",
-"scripts": {
-  "start": "node app.js"
-},
+  "main": "api/app.js",
+  "scripts": {
+    "start": "node api/app.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -16,7 +16,8 @@
     "express": "^5.1.0",
     "express-ejs-layouts": "^2.5.1",
     "mongoose": "^8.13.2",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "serverless-http": "^3.0.1"       // ✅ ajouté
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
